# tower-lsp

./: Cargo.toml  clippy.toml
examples/: custom_notification.rs  stdio.rs  tcp.rs  websocket.rs
src/: codec.rs  jsonrpc.rs  lib.rs  service.rs  transport.rs
src/jsonrpc/: error.rs  request.rs  response.rs  router.rs
src/service/: client.rs  layers.rs
src/service/client/: pending.rs  progress.rs
