[workspace]
members = [".", "./tower-lsp-macros"]
default-members = ["."]

[workspace.lints]
[workspace.lints.rust]
unsafe_code = "deny"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
# missing_docs_in_private_items = "warn"
# todo = "warn"
# unwrap_used = "warn"
[workspace.lints.rustdoc]
all = "warn"

[package]
name = "tower-lsp"
version = "0.20.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2021"
rust-version = "1.64.0"
description = "Language Server Protocol implementation based on Tower"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"
documentation = "https://docs.rs/tower-lsp/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["FEATURES.md"]

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]
proposed = ["lsp-types/proposed"]

[dependencies]
tower-lsp-macros = { version = "0.9", path = "./tower-lsp-macros" }

async-codec-lite = { version = "0.0", optional = true }
async-trait = "0.1"
auto_impl = "1"
bytes = "1"
dashmap = "6"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
httparse = "1"
lsp-types = "0.97"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"

[dev-dependencies]
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
ws_stream_tungstenite = { version = "0.13", features = ["tokio_io"] }

[lints]
workspace = true
